# cfd

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
1d/couette_flow/cranck_nicolson/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
1d/couette_flow/cranck_nicolson_time_variation/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
1d/couette_flow/explicit_euler/: CMakeLists.txt  Cargo.toml  main.cpp  solver.cpp  solver.h
1d/couette_flow/explicit_euler/src/: main.rs
1d/couette_flow/gravity/cranck_nicolson_time_variation/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
1d/couette_flow/high_order_compact/cranck_nicolson_time_variation/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
1d/couette_flow/implicit_euler/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
1d/couette_flow/steady_state/: CMakeLists.txt  Cargo.toml  main.cpp  solver.cpp  solver.h
1d/couette_flow/steady_state/src/: main.rs
1d/heat_conduction/thermally_insulated/cranck_nicolson_time_variation/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
1d/heat_conduction/thermally_insulated/steady_state/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
1d/inviscid_burgers/beam_warming/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
1d/inviscid_burgers/eno_x2t1/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
1d/inviscid_burgers/eno_x2t2/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
1d/inviscid_burgers/enquist_osher/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
1d/inviscid_burgers/explicit_euler/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
1d/inviscid_burgers/roe/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
1d/inviscid_burgers/step/enquist_osher/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
1d/inviscid_burgers/step/roe/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
1d/inviscid_burgers/step/tvd/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
1d/inviscid_burgers/step/upwind_conservative/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
1d/inviscid_burgers/step/upwind_fct/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
1d/inviscid_burgers/tvd/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
1d/inviscid_burgers/tvd_implicit/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
1d/inviscid_burgers/upwind/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
1d/inviscid_burgers/upwind_conservative/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
1d/inviscid_burgers/upwind_fct/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
1d/linear_advection/eno_x2t1/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
1d/linear_advection/eno_x2t2/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
1d/linear_advection/explicit_euler/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
1d/linear_advection/implicit_euler/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
1d/linear_advection/lax_wendroff/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
1d/linear_advection/tvd/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
1d/linear_advection/tvd_implicit/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
1d/linear_advection/upwind_fct/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
2d/heat_conduction/thermally_insulated/cranck_nicolson/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
2d/heat_conduction/thermally_insulated/peaceman_rachford/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
2d/heat_conduction/thermally_insulated/steady_state/cg/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
2d/poiseuille_flow/cranck_nicolson/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
2d/poiseuille_flow/elliptic_domain/cranck_nicolson/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
2d/poiseuille_flow/elliptic_domain/peaceman_rachford/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
2d/poiseuille_flow/explicit_euler/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
2d/poiseuille_flow/free_surface/cranck_nicolson/: CMakeLists.txt  main.cpp  solver.cpp  (+1 more)
2d/poiseuille_flow/peaceman_rachford/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
2d/poiseuille_flow/steady_state/elliptic_domain/cg/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
2d/poiseuille_flow/triangular_domain/free_surface/peaceman_rachford/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
post_processing/1d/burgers/: source_analytical_solution_table.py
post_processing/1d/couette_flow/: analytical_solution.py  filter_analytical_solution_structured_grid.py  filter_analytical_solution_table.py  filter_steady_state_analytical_solution_table.py  filter_steady_unsteady_diff_structured_grid.py  source_analytical_solution_table.py  source_growth_factor_and_r_table.py
post_processing/1d/couette_flow_free_surface/: filter_analytical_solution_structured_grid.py
post_processing/1d/couette_flow_gravity/: filter_analytical_solution_structured_grid.py
post_processing/1d/inviscid_burgers/: filter_step_analytical_solution_structured_grid.py
post_processing/1d/linear_advection/: filter_analytical_solution_structured_grid.py
post_processing/1d/utils/: convergence_over_time.py
post_processing/2d/poiseuille_flow/: filter_analytical_solution_structured_grid.py  filter_elliptic_domain_analytical_solution_structured_grid.py  filter_free_surface_analytical_solution_structured_grid.py  filter_steady_state_analytical_solution_structured_grid.py  filter_steady_state_elliptic_domain_analytical_solution_structured_grid.py  filter_steady_state_free_surface_analytical_solution_structured_grid.py  filter_steady_state_triangular_domain_analytical_solution_structured_grid.py  filter_steady_state_triangular_domain_free_surface_analytical_solution_structured_grid.py  filter_triangular_domain_analytical_solution_structured_grid.py  filter_triangular_domain_free_surface_analytical_solution_structured_grid.py
slae/: CMakeLists.txt  Cargo.toml  utils.cpp  utils.h
slae/direct/: augmented_tridiagonal.cpp  augmented_tridiagonal.h  tridiagonal.cpp  tridiagonal.h
slae/iterative/: cg.cpp  cg.h
slae/src/direct/: mod.rs  tridiagonal.rs
(+92 files in other folders)
