cmake_minimum_required(VERSION 3.16)

project(cfd LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(slae)

add_subdirectory(1d/couette_flow/explicit_euler)
add_subdirectory(1d/couette_flow/steady_state)
add_subdirectory(1d/couette_flow/implicit_euler)
add_subdirectory(1d/couette_flow/cranck_nicolson)
add_subdirectory(1d/couette_flow/cranck_nicolson_time_variation)

add_subdirectory(1d/couette_flow/free_surface/cranck_nicolson_time_variation/1_order_bc)
add_subdirectory(1d/couette_flow/free_surface/cranck_nicolson_time_variation/2_order_bc)

add_subdirectory(1d/couette_flow/gravity/cranck_nicolson_time_variation)

add_subdirectory(1d/couette_flow/high_order_compact/cranck_nicolson_time_variation)

add_subdirectory(1d/heat_conduction/thermally_insulated/cranck_nicolson_time_variation)
add_subdirectory(1d/heat_conduction/thermally_insulated/steady_state)

add_subdirectory(2d/poiseuille_flow/explicit_euler)
add_subdirectory(2d/poiseuille_flow/peaceman_rachford)
add_subdirectory(2d/poiseuille_flow/cranck_nicolson)

add_subdirectory(2d/poiseuille_flow/free_surface/peaceman_rachford)
add_subdirectory(2d/poiseuille_flow/free_surface/cranck_nicolson)

add_subdirectory(2d/poiseuille_flow/elliptic_domain/peaceman_rachford)
add_subdirectory(2d/poiseuille_flow/elliptic_domain/cranck_nicolson)
add_subdirectory(2d/poiseuille_flow/triangular_domain/peaceman_rachford)
add_subdirectory(2d/poiseuille_flow/triangular_domain/cranck_nicolson)

add_subdirectory(2d/poiseuille_flow/triangular_domain/free_surface/peaceman_rachford)
add_subdirectory(2d/poiseuille_flow/triangular_domain/free_surface/cranck_nicolson)

add_subdirectory(2d/poiseuille_flow/steady_state/richardson)
add_subdirectory(2d/poiseuille_flow/steady_state/sor)
add_subdirectory(2d/poiseuille_flow/steady_state/cg)

add_subdirectory(2d/poiseuille_flow/steady_state/free_surface/richardson)
add_subdirectory(2d/poiseuille_flow/steady_state/free_surface/sor)
add_subdirectory(2d/poiseuille_flow/steady_state/free_surface/cg)

add_subdirectory(2d/poiseuille_flow/steady_state/elliptic_domain/richardson)
add_subdirectory(2d/poiseuille_flow/steady_state/elliptic_domain/sor)
add_subdirectory(2d/poiseuille_flow/steady_state/elliptic_domain/cg)

add_subdirectory(2d/poiseuille_flow/steady_state/triangular_domain/richardson)
add_subdirectory(2d/poiseuille_flow/steady_state/triangular_domain/sor)
add_subdirectory(2d/poiseuille_flow/steady_state/triangular_domain/cg)

add_subdirectory(2d/poiseuille_flow/steady_state/triangular_domain/free_surface/richardson)
add_subdirectory(2d/poiseuille_flow/steady_state/triangular_domain/free_surface/sor)
add_subdirectory(2d/poiseuille_flow/steady_state/triangular_domain/free_surface/cg)

add_subdirectory(2d/heat_conduction/thermally_insulated/peaceman_rachford)
add_subdirectory(2d/heat_conduction/thermally_insulated/cranck_nicolson)

add_subdirectory(2d/heat_conduction/thermally_insulated/steady_state/richardson)
add_subdirectory(2d/heat_conduction/thermally_insulated/steady_state/sor)
add_subdirectory(2d/heat_conduction/thermally_insulated/steady_state/cg)

add_subdirectory(1d/linear_advection/explicit_euler)
add_subdirectory(1d/linear_advection/implicit_euler)
add_subdirectory(1d/linear_advection/lax_wendroff)

add_subdirectory(1d/inviscid_burgers/explicit_euler)
add_subdirectory(1d/inviscid_burgers/upwind)
add_subdirectory(1d/inviscid_burgers/upwind_conservative)
add_subdirectory(1d/inviscid_burgers/beam_warming)
add_subdirectory(1d/inviscid_burgers/roe)

add_subdirectory(1d/inviscid_burgers/step/upwind_conservative)
add_subdirectory(1d/inviscid_burgers/step/roe)
add_subdirectory(1d/inviscid_burgers/step/enquist_osher)
