cmake_minimum_required(VERSION 3.16)

project(2d_poiseuille_flow_triangular_domain_free_surface_peaceman_rachford LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(2d_poiseuille_flow_triangular_domain_free_surface_peaceman_rachford main.cpp solver.cpp)

target_link_libraries(2d_poiseuille_flow_triangular_domain_free_surface_peaceman_rachford PRIVATE
    slae
)
